--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Pelis",
     "start_url": "index.html",
     "display": "fullscreen",
-    "theme_color": "#212529",
-    "background_color": "#212529",
+    "theme_color": "#dc143c",
+    "background_color": "#dc143c",
     "description": "PelisPlus, toda la info de tus pelis favoritas en un solo lugar",
     "orientation": "portrait",
     "lang": "es",
